# DNicheLooper

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/dnichelooper/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  IrProcessor.cpp  IrProcessor.h  NamChain.cpp  NamChain.h  jni_bridge.cpp
app/src/main/java/com/example/dnichelooper/: MainActivity.kt
app/src/main/java/com/example/dnichelooper/audio/: AudioEngine.kt  DrumKitLoader.kt  EngineService.kt  IrStore.kt  LoopLibrary.kt  LoopSaver.kt  LooperState.kt  NamStore.kt  UsbDeviceDetector.kt  WavWriter.kt
app/src/main/java/com/example/dnichelooper/ui/: TransportScreen.kt  TransportViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/dnichelooper/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
